remove z-index bug

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -42,7 +42,6 @@ p {
     height: 60px;
     line-height: 60px;
     background-color: #0a0a0a;
-    z-index:9999;
 }
 
 .company-name {
